--- a/E-Ticket.net/appsettings.json
+++ b/E-Ticket.net/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=DESKTOP-QPFTBCQ;Initial Catalog=E-Ticket;Integrated Security=True;Pooling=False"
+    "DefaultConnectionString": "Data Source=SQL5108.site4now.net;Initial Catalog=db_a7df06_eticket123;User Id=db_a7df06_eticket123_admin;Password=Abdullah05374611"
   },
 
 
